--- a/popup.html
+++ b/popup.html
@@ -17,6 +17,9 @@
 		free to contribute at our <a href="https://github.com/dbeck121/ConVista-CPI-Helper-Chrome-Extension"
 			target="_blank">Github Page</a>.<br>
 		<br>
+		You run version 0.2.2<br>Check <a href="https://github.com/dbeck121/ConVista-CPI-Helper-Chrome-Extension"
+			target="_blank">Github</a> for updates.
+		<br>
 		<br>License: <a href="https://www.gnu.org/licenses/gpl-3.0.en.html" target="_blank">GNU GPL v3</a>
 	</div>
 
