added update warning

--- a/popup.html
+++ b/popup.html
@@ -61,8 +61,7 @@
 				Feel free to contribute at our
 				<a href="https://github.com/dbeck121/ConVista-CPI-Helper-Chrome-Extension" target="_blank">Github
 					Page</a>.</p>
-			<p>You run version 0.5.0<br>Check <a href="https://github.com/dbeck121/ConVista-CPI-Helper-Chrome-Extension"
-					target="_blank">Github</a> for updates.</p>
+			<p id="cpihelper_version"></p>
 			<p>License: <a href="https://www.gnu.org/licenses/gpl-3.0.en.html" target="_blank">GNU GPL v3</a></p>
 		</div>
 	</div>
