--- a/popup.html
+++ b/popup.html
@@ -41,6 +41,12 @@
 		ul {
 			margin-top: 0.3em;
 		}
+
+		.input_fields {
+			margin-top: 2px;
+			padding: 2px;
+			margin-bottom: 5px;
+		}
 	</style>
 </head>
 
